--- a/style.css
+++ b/style.css
@@ -171,6 +171,9 @@ img {
     /* position: relative; */
     text-align: center;
     border: 4px solid rgb(15, 15, 15);
+    background-color:burlywood;
+    height: 100vh;
+    
 
 }
 
