--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ img {
 }
 
 #testimonial {
-    /* position: relative; */
+    position: relative; 
     text-align: center;
     border: 4px solid rgb(15, 15, 15);
     background-color:burlywood;
