--- a/style.css
+++ b/style.css
@@ -142,9 +142,9 @@ main {
 }
 
 img {
-    float: right;
-    margin-right: 50px;
-    /* margin: 0 0 0 15px;
+    float: left;
+/*  margin-right: 50px;
+    margin: 0 0 0 15px;
     padding: 10px 70px 50px; */
     display: block;
     /* padding-bottom: 100px;
@@ -168,7 +168,7 @@ img {
 }
 
 #testimonial {
-    position: relative; 
+    position: relative;
     text-align: center;
     border: 4px solid rgb(15, 15, 15);
     background-color:burlywood;
@@ -176,6 +176,11 @@ img {
     
 
 }
+ /* div.gallery img {
+     width: 100%;
+     height: auto;
+
+ } */
 
 #message1 {
     text-align: center;
